# kleinanzeigen-ai

./: .build_info  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_UPGRADE_PATH.md  CLAUDE.md  MANUS_REVIEW.md  O LLAMA_FIX_SUMMARY.md  PR.md  README.md  TODO.md  TODO.txt  alembic.ini  docker-compose.prod.yml  docker-compose.yml  performance_test.py  pyproject.toml  pytest.ini  requirements.txt  test_google_trends.py  test_smart_search.sh
.bob/: AGENTS.md
.review/: deploy-review-checklist.md
alembic/: env.py
data/: klick_daten.json  training_data.json  trends.json
deploy/: Caddyfile  backup.sh  deploy.sh
docker/: ollama-startup.sh
docs/: alembic.md  architecture.md  terraform.md  translation-workflow.md  turnstile.md  url_builder.md  vps-deployment.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
infra/: aws-setup.sh  azure-setup.sh  gcp-setup.sh
lora_output/: notes.txt  training_data.json
monitoring/: prometheus.yml
scripts/: gen_pwa_icons.py  smoke-test.sh
tests/: conftest.py  mobile_viewport_check.py  test_ai_search.py  test_ai_search_chat.py  test_billing_webhook.py  test_category_codes.py  test_category_profiles.py  test_dashboard_render.py  test_ensure_task_missing_row.py  test_flash_cookie_encoding.py  test_fraud_detection.py  test_geocoding.py  test_metrics_prom.py  test_mobile_qa_helpers.py  test_notification_gating.py  test_observability.py  test_push_notification_content.py  test_rate_limiter.py  test_recurring_reaper.py  test_result_filters.py  test_search_creation.py  (+3 more)
(+197 files in other folders)
