[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kleinanzeigen-ai"
version = "0.1.0"
description = "AI-powered tooling for Kleinanzeigen"
requires-python = ">=3.11"
# Runtime dependencies live in requirements.txt — it is the single source of
# truth, consumed by every install path (app/api, app/worker, app/beat
# Dockerfiles and the CI test job). This project is never pip-installed as a
# package (no setup.py / editable install), so keeping a duplicate dependency
# list here only drifted out of sync with requirements.txt. Dev tooling pins
# (ruff/mypy/pytest) remain in [project.optional-dependencies] below.

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
